add endpoint for index user query
