# app/controllers/api/v1/users_controller.rb
@@ -1,6 +1,8 @@
 module Api
   module V1
     class UsersController < ApiController
+      include Pagination
+
       def create
         @user = User.new(user_create_params)
         if @user.save
@@ -23,6 +25,18 @@ module Api
         else
           render json: ErrorSerializer.new(user.errors), status: :unprocessable_entity
         end
+      end
+
+      def index
+        paginator = Pagination.new(request.path)
+
+        page = params[:page] || 1
+        limit = params[:limit] || 32
+
+        pagination, users = paginator.paginate(User.all, page: page, limit: limit)
+
+        options = { links: pagination.links.as_json, meta: { pagination: pagination.details } }
+        render json: UserSerializer.new(users, options), status: :ok
       end
 
       private
